<resources>
    <string name="app_name">Jireh</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_dob">Date Of Birth</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_signup_password">Password</string>
    <string name="prompt_signup_confirmpassword">Confirm Password</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or Sign up</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">
        "Contacts permissions are needed for providing email completions."
    </string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_locate_service">Services available</string>
    <string name="prompt_phonenumber">Phone</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="title_activity_available_services">AvailableServicesActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

    <string name="action_update">Update User</string>
    <string name="action_delete">Delete Account</string>
    <string name="title_activity_delete_account">DeleteAccountActivity</string>
    <string name="deleteReasonTextAreaLabel">Why are you deleting your account?</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_become_aservice_provider">BecomeAServiceProviderActivity</string>
    <string name="title_activity_service_provider_request_complete">
        ServiceProviderRequestCompleteActivity
    </string>
    <string name="title_activity_service_provider_request_list">ServiceProviderRequestListActivity
    </string>
    <string name="full_name_serviceproviderrequest">Full Name</string>
    <string name="email_serviceproviderrequest">Email</string>
    <string name="status">Status</string>
    <string name="servicesToOffer">Services to offer</string>
    <string name="bankInfo">Bank Information</string>
    <string name="serviceproviderstatus_approved">Approved</string>
    <string name="serviceproviderstatus_declined">Declined</string>
    <string name="serviceproviderstatus_pending">Pending</string>
    <string name="title_activity_confirm_service_provider_request_status">
        ConfirmServiceProviderRequestStatusActivity
    </string>
</resources>
