<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serviceProviderName"
        android:hint="@string/full_name_serviceproviderrequest">
    </TextView>
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/servicesRequestedToOffer"
        android:hint="@string/servicesToOffer">
    </TextView>
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serviceProvidersBankInfo"
        android:hint="@string/bankInfo">
    </TextView>
</LinearLayout>