<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appspot.aniekanedwardakai.jireh.UserProfileActivity"
    tools:showIn="@layout/app_bar_user_profile">


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView android:id="@+id/full_name" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_fullname"
            android:inputType="textAutoComplete" android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_signup_password"
            android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/confirmpassword" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_signup_confirmpassword"
            android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView android:id="@+id/phoneNumber" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_phonenumber"
            android:inputType="phone" android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/dateOfBirth" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_dob"
            android:inputType="date" android:maxLines="1"
            android:singleLine="true"
            android:editable="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout android:orientation="horizontal"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal|bottom">

        <Button android:id="@+id/user_update_button" style="?android:textAppearanceLarge"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/action_update"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
