<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appspot.aniekanedwardakai.jireh.DeleteAccountActivity"
    tools:showIn="@layout/app_bar_delete_account">

    <TextView
        android:id="@+id/deleteReasonTextAreaLabel"
        android:text="@string/deleteReasonTextAreaLabel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        style="?android:textAppearanceLarge" />

    <MultiAutoCompleteTextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/deleteReasonTextArea"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"    >

        <Button
            android:id="@+id/confirmDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delete"
            />

        <Button
            android:id="@+id/cancelDeleteActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            />
    </LinearLayout>

</LinearLayout>
